--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,2 +1,3 @@
 <% title(@project.name, controller_name.capitalize) %>
 <h2><%= @project.name %></h2>
+<%= link_to "Edit Project", edit_project_path(@project) %>
