--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,17 @@
 <% title(@project.name, controller_name.capitalize) %>
 <h2><%= @project.name %></h2>
+<% if @project.description == "" %>
+<p>No description was provided with this project</p>
+<% else %>
+<p><%= @project.description %></p>
+<% end %>
+<ul id="projects">
+    <% @project.tickets.each do |ticket| %>
+        <li>
+            #<%= ticket.id %> - <%= link_to ticket.title, [@project, ticket] %>
+        </li>
+    <% end %>
+</ul>
 <%= link_to "Edit Project", edit_project_path(@project) %>
 <%= link_to "Delete Project", project_path(@project), method: :delete, data: {confirm: "Are you sure you want to delete the project ?"} %>
 <%= link_to "New Ticket", new_project_ticket_path(@project) %>
