--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@ Ticketee
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav><%= link_to "Sign Up", new_user_path %></nav>
   <% flash.each do |key, value| %>
 <div class='flash' id='<%= key %>'>
 <%= value %>
