--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,12 @@ Ticketee
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav><%= link_to "Sign Up", new_user_path %></nav>
+  <nav>
+<ul>
+<li><%= link_to "Sign Up", new_user_path %></li>
+<li><%= link_to "Sign In", signin_path %></li>
+</ul>
+</nav>
   <% flash.each do |key, value| %>
 <div class='flash' id='<%= key %>'>
 <%= value %>
