--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1>Hello <%= @user.name %></h1>
+<h2>Email :- <br><br><i><%= @user.email %></i></h2>
+<%= link_to "Edit Profile", edit_user_path %>
